# opentelemetry-instrumentation-aerospike

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
sample/: README.md  compose.yaml  main.py  pyproject.toml
src/opentelemetry/instrumentation/aerospike/: __init__.py  package.py  version.py
tests/: test_aerospike_instrumentation.py  test_aerospike_integration.py  test_e2e.py
